# HEA-Database-Development

./: .dockerignore  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.md  VERSION.txt  dagster.yaml  docker-compose.ci.yml  docker-compose.ecsmanage.yml  docker-compose.override.yml  docker-compose.production.yml  docker-compose.utils.yml  docker-compose.yml  ecs-params.yml  env.example  luigi.cfg  manage.py  pyproject.toml  wsgi.conf
.github/workflows/: 01-build-then-test.yml  01-mirror-to-gitlab.yaml  02-build-then-test.yml  02-deploy-env.yml  03-deploy-env.yml  03-mirror-to-fdw.yml  03-mirror-to-fewsnet-org.yml
Notebooks/: HEA-90.ipynb
apps/activity/: models.py
apps/baseline/: admin.py  apps.py  autocomplete.py  forms.py  importers.py  lookups.py  models.py  serializers.py  signals.py  translation.py  tree_utils.py  views.py  viewsets.py
apps/common/: __init__.py  admin.py  apps.py  consumers.py  context_processors.py  enums.py  exception_handlers.py  fields.py  filters.py  forms.py  importers.py  logging_filters.py  lookups.py  menu_config.py  models.py  renderers.py  routing.py  serializers.py  translation.py  utils.py  views.py  viewsets.py
apps/ingestion/: apps.py  decorators.py  exceptions.py  importers.py  mappers.py  models.py
apps/metadata/: admin.py  apps.py  lookups.py  models.py  serializers.py  translation.py  viewsets.py
hea/: asgi.py  urls.py  wsgi.py
pipelines/: .gitignore  __init__.py  configs.py  partitions.py  resources.py  sensors.py  utils.py
requirements/: base.txt  lint.txt  local.txt  test.txt
(+332 files in other folders)
