[project]
name = "hea-database-development"
version = "0.1.0"
description = "The HEA Database manages HEA Baseline data."
readme = "README.md"
requires-python = ">=3.12"

[tool.ruff]
line-length = 119
target-version = 'py312'
exclude = [
  '.eggs',        # exclude a few common directories in the
  '.git',         # root of the project
  '.history',
  '.hg',
  '.mypy_cache',
  '.tox',
  '.venv',
  '_build',
  'migrations',
  'node_modules',
  'buck-out',
  'build',
  'builds',
  'dist',
]

[lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[lint.flake8-quotes]
docstring-quotes = "double"

[tool.black]
line-length = 119
target-version = ['py312']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.history
    | \.hg
    | \.mypy_cache
    | .ruff_cache
    | \.tox
    | \.venv
    | _build
    | node_modules
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
skip = [".history", ".tox"]
src_paths = ["apps"]


[tool.dagster]
module_name = "pipelines"
